EXTRA_DIST = doc/* mud/*.int mud/*/*.txt mud/*/*.int casa/*.int casa/*.txt testes/*.int editmud/editmud* make-mingw-* intmud*.int telnet.int quest* minichat.int mudaprog.int Doxyfile TODO COPYING2
bin_PROGRAMS = intmud
intmud_SOURCES = main.cpp classe.cpp classe.h objeto.cpp objeto.h variavel.cpp variavel.h arqmapa.cpp arqmapa.h instr-codif.cpp instr-decod.cpp instr-mostra.cpp instr-exec.cpp instr-func.cpp instr-misc.cpp instr.h socket.cpp socket.h console.cpp console.h var-telatxt.cpp var-telatxt.h var-socket.cpp var-socket.h var-serv.cpp var-serv.h var-outros.cpp var-outros.h var-listaobj.cpp var-listaobj.h var-texto.cpp var-texto-bloco.cpp var-texto-func.cpp var-texto.h var-textovar.cpp var-textovar.h var-textoobj.cpp var-textoobj.h var-nomeobj.cpp var-nomeobj.h var-log.cpp var-log.h var-sav.cpp var-sav.h var-txt.cpp var-txt.h var-dir.cpp var-dir.h var-indiceobj.cpp var-indiceobj.h var-prog.cpp var-prog.h var-arqprog.cpp var-arqprog.h var-debug.cpp var-debug.h getrss.cpp var-datahora.cpp var-datahora.h mudarclasse.cpp mudarclasse.h arqler.cpp arqler.h misc.cpp misc.h procurar.cpp procurar.h random.cpp random.h sha1.cpp sha1.h md5.cpp md5.h ssl.cpp ssl.h rbt.cpp.h
AM_CXXFLAGS = -Wall -fno-exceptions -fno-rtti

