EXTRA_DIST = AUTHORS ChangeLog COPYING README.md doc/* mud/*.int mud/*/*.txt mud/*/*.int casa/*.int casa/*.txt testes/*.int programas-int/* intmud.int Doxyfile
bin_PROGRAMS = intmud
intmud_SOURCES = \
  src/main.cpp \
  src/classe.cpp \
  src/classe.h \
  src/objeto.cpp \
  src/objeto.h \
  src/variavel.cpp \
  src/variavel.h \
  src/variavel-def.h \
  src/arqmapa.cpp \
  src/arqmapa.h \
  src/instr-codif.cpp \
  src/instr-decod.cpp \
  src/instr-mostra.cpp \
  src/instr-exec.cpp \
  src/instr-func.cpp \
  src/instr-vartroca.cpp \
  src/instr-misc.cpp \
  src/instr.h \
  src/instr-enum.h \
  src/instr-func.h \
  src/socket.cpp \
  src/socket.h \
  src/console.cpp \
  src/console.h \
  src/var-telatxt.cpp \
  src/var-telatxt.h \
  src/var-socket.cpp \
  src/var-socket.h \
  src/var-serv.cpp \
  src/var-serv.h \
  src/var-ref.cpp \
  src/var-ref.h \
  src/var-incdec.cpp \
  src/var-incdec.h \
  src/var-inttempo.cpp \
  src/var-inttempo.h \
  src/var-intexec.cpp \
  src/var-intexec.h \
  src/var-basico.cpp \
  src/var-basico.h \
  src/var-outros.cpp \
  src/var-outros.h \
  src/var-listaobj.cpp \
  src/var-listaobj.h \
  src/var-texto.cpp \
  src/var-texto-bloco.cpp \
  src/var-texto-func.cpp \
  src/var-texto.h \
  src/var-textovar.cpp \
  src/var-textovar.h \
  src/var-textoobj.cpp \
  src/var-textoobj.h \
  src/var-nomeobj.cpp \
  src/var-nomeobj.h \
  src/var-arqlog.cpp \
  src/var-arqlog.h \
  src/var-arqsav.cpp \
  src/var-arqsav.h \
  src/var-arqtxt.cpp \
  src/var-arqtxt.h \
  src/var-arqmem.cpp \
  src/var-arqmem.h \
  src/var-arqdir.cpp \
  src/var-arqdir.h \
  src/var-indiceobj.cpp \
  src/var-indiceobj.h \
  src/var-prog.cpp \
  src/var-prog.h \
  src/var-arqprog.cpp \
  src/var-arqprog.h \
  src/var-debug.cpp \
  src/var-debug.h \
  src/getrss.cpp \
  src/var-datahora.cpp \
  src/var-datahora.h \
  src/exec.cpp \
  src/exec.h \
  src/var-arqexec.cpp \
  src/var-arqexec.h \
  src/mudarclasse.cpp \
  src/mudarclasse.h \
  src/arqler.cpp \
  src/arqler.h \
  src/misc.cpp \
  src/misc.h \
  src/procurar.cpp \
  src/procurar.h \
  src/random.cpp \
  src/random.h \
  src/sha1.cpp \
  src/sha1.h \
  src/md5.cpp \
  src/md5.h \
  src/ssl.cpp \
  src/ssl.h \
  src/alocamem.h \
  src/rbt.cpp.h
AM_CXXFLAGS = -Wall -fno-exceptions -fno-rtti -std=c++11 -Isrc
