EXTRA_DIST = doc/* make-mingw-* intmud.cfg intmud.map Doxyfile
bin_PROGRAMS = intmud
intmud_SOURCES = main.cpp classe.cpp classe.h objeto.cpp objeto.h variavel.cpp variavel.h arqmapa.cpp arqmapa.h instr-codif.cpp instr-decod.cpp instr-mostra.cpp instr-exec.cpp instr-func.cpp instr-misc.cpp instr.h socket.cpp socket.h var-socket.cpp var-socket.h var-serv.cpp var-serv.h arqler.cpp arqler.h misc.cpp misc.h random.cpp random.h shs.cpp shs.h rbt.cpp.h
AM_CXXFLAGS = -Wall -fno-exceptions -fno-rtti

