EXTRA_DIST = doc/* make-mingw-* intmud*.int mud*.int teste*.int telnet.int editmud.int editmud-gtkmm.cpp editmud.c editmud-resource.h editmud-resource.rc quest* minichat.int Doxyfile TODO
bin_PROGRAMS = intmud
intmud_SOURCES = main.cpp classe.cpp classe.h objeto.cpp objeto.h variavel.cpp variavel.h arqmapa.cpp arqmapa.h instr-codif.cpp instr-decod.cpp instr-mostra.cpp instr-exec.cpp instr-func.cpp instr-misc.cpp instr.h socket.cpp socket.h console.cpp console.h var-telatxt.cpp var-telatxt.h var-socket.cpp var-socket.h var-serv.cpp var-serv.h var-outros.cpp var-outros.h var-listaobj.cpp var-listaobj.h var-texto.cpp var-texto-bloco.cpp var-texto-func.cpp var-texto.h var-textovar.cpp var-textovar.h var-nomeobj.cpp var-nomeobj.h var-log.cpp var-log.h var-sav.cpp var-sav.h var-txt.cpp var-txt.h var-dir.cpp var-dir.h var-indiceobj.cpp var-indiceobj.h var-prog.cpp var-prog.h var-debug.cpp var-debug.h var-datahora.cpp var-datahora.h mudarclasse.cpp mudarclasse.h arqler.cpp arqler.h misc.cpp misc.h procurar.cpp procurar.h random.cpp random.h shs.cpp shs.h rbt.cpp.h
AM_CXXFLAGS = -Wall -fno-exceptions -fno-rtti

